done basic staff 🔐 - v1

--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Puzzle Game</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/img/jigsaw.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="wrapper">
       <div class="puzzle"></div>
+      <div class="control">
+        <div>
+          <button class="active">Easy</button>
+        </div>
+        <div>
+          <button>Medium</button>
+        </div>
+        <div>
+          <button>Hard</button>
+        </div>
+        <div>
+          <button>Harder</button>
+        </div>
+      </div>
     </div>
 
     <script src="app.js"></script>
